--- a/src/edit-password/edit-password.component.html
+++ b/src/edit-password/edit-password.component.html
@@ -1,5 +1,5 @@
 <div class="change-password-container">
-  <p-card header="Forgot Password" styleClass="change-password-card">
+  <p-card header="Edit Password" styleClass="change-password-card">
     <form [formGroup]="editPasswordForm" (ngSubmit)="onSubmit()">
       <div class="form-field">
         <label for="currentPassword">Current Password</label>
@@ -58,7 +58,7 @@
       <div class="form-actions">
         <p-button
           type="submit"
-          label="Change Password"
+          label="Change "
           [disabled]="editPasswordForm.invalid || isLoading"
           [loading]="isLoading"
           styleClass="primary-button"
