--- a/src/forget-password/forget-password.component.html
+++ b/src/forget-password/forget-password.component.html
@@ -58,7 +58,7 @@
       <div class="form-actions">
         <p-button 
           type="submit" 
-          label="Change Password" 
+          label="Update" 
           [disabled]="changePasswordForm.invalid || isLoading"
           [loading]="isLoading"
           styleClass="primary-button"
