--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -24,6 +24,41 @@
       </a>
     </ng-template>
 
+    <!-- Navigation Buttons - Home and Dashboard -->
+    <ng-template #start>
+      <div class="navigation-section">
+        <!-- Home Button - Always visible -->
+        <a 
+        *ngIf="isLoggedIn"
+          class="nav-link home-link" 
+          (click)="goToHome()"
+          role="button"
+          tabindex="0"
+          (keydown.enter)="goToHome()"
+          (keydown.space)="goToHome()"
+          aria-label="Go to Home"
+        >
+          <i class="pi pi-home nav-icon"></i>
+          <span class="nav-text">Home</span>
+        </a>
+
+        <!-- Dashboard Button - Only visible when logged in -->
+        <a 
+          class="nav-link dashboard-link" 
+          *ngIf="isLoggedIn"
+          (click)="goToDashboard()"
+          role="button"
+          tabindex="0"
+          (keydown.enter)="goToDashboard()"
+          (keydown.space)="goToDashboard()"
+          aria-label="Go to Dashboard"
+        >
+          <i class="pi pi-th-large nav-icon"></i>
+          <span class="nav-text">Dashboard</span>
+        </a>
+      </div>
+    </ng-template>
+
     <!-- End Section - Auth/User Menu -->
     <ng-template #end>
       <!-- Not Logged In State -->
@@ -107,9 +142,9 @@
                   class="p-button-sm p-button-danger w-full danger" 
                   (click)="onDelete()"
                   role="menuitem"
-                  aria-label="Logout from your account"
+                  aria-label="Delete account permanently"
                 >
-                  <i class="pi pi-sign-out mr-2"></i>
+                  <i class="pi pi-trash mr-2"></i>
                   Delete Profile
                 </button>
               </li>
