--- a/src/navbar/navbar.component.html
+++ b/src/navbar/navbar.component.html
@@ -1,36 +1,32 @@
 <div class="card">
   <p-menubar [model]="items">
-   
-    <!-- Menu Items Template -->
     <ng-template #item let-item let-root="root">
       <a pRipple class="flex items-center p-menubar-item-link">
         <i *ngIf="item.icon" [class]="item.icon + ' p-menuitem-icon'"></i>
         <span>{{ item.label }}</span>
-        <p-badge 
-          *ngIf="item.badge" 
-          [ngClass]="{ 'ml-auto': !root, 'ml-2': root }" 
-          [value]="item.badge" 
+        <p-badge
+          *ngIf="item.badge"
+          [ngClass]="{ 'ml-auto': !root, 'ml-2': root }"
+          [value]="item.badge"
         />
-        <span 
-          *ngIf="item.shortcut" 
+        <span
+          *ngIf="item.shortcut"
           class="ml-auto border border-surface rounded bg-emphasis text-muted-color text-xs p-1"
         >
           {{ item.shortcut }}
         </span>
-        <i 
-          *ngIf="item.items" 
+        <i
+          *ngIf="item.items"
           [ngClass]="['ml-auto pi', root ? 'pi-angle-down' : 'pi-angle-right']"
         ></i>
       </a>
     </ng-template>
 
-    <!-- Navigation Buttons - Home and Dashboard -->
     <ng-template #start>
       <div class="navigation-section">
-        <!-- Home Button - Always visible -->
-        <a 
-        *ngIf="isLoggedIn"
-          class="nav-link home-link" 
+        <a
+          *ngIf="isLoggedIn"
+          class="nav-link home-link"
           (click)="goToHome()"
           role="button"
           tabindex="0"
@@ -42,9 +38,8 @@
           <span class="nav-text">Home</span>
         </a>
 
-        <!-- Dashboard Button - Only visible when logged in -->
-        <a 
-          class="nav-link dashboard-link" 
+        <a
+          class="nav-link dashboard-link"
           *ngIf="isLoggedIn"
           (click)="goToDashboard()"
           role="button"
@@ -59,26 +54,25 @@
       </div>
     </ng-template>
 
-    <!-- End Section - Auth/User Menu -->
     <ng-template #end>
-      <!-- Not Logged In State -->
       <div class="auth-section logged-out" *ngIf="!isLoggedIn">
-        <button 
-          pButton 
-          label="Login" 
-          class="p-button-sm p-button-outlined" 
+        <button
+          pButton
+          label="Login"
+          class="p-button-sm p-button-outlined"
           (click)="auth()"
           aria-label="Login to your account"
-        >Login
+        >
+          Login
         </button>
       </div>
 
-      <!-- Logged In State -->
       <div class="auth-section logged-in" *ngIf="isLoggedIn">
         <div class="user-menu">
-          <p-avatar 
-            [label]="userInitial" 
-            shape="circle" 
+          <p-avatar
+            *ngIf="profileImage; else userInitialAvatar"
+            [image]="profileImage"
+            shape="circle"
             size="normal"
             (click)="toggleUserDropdown = !toggleUserDropdown"
             [attr.aria-expanded]="toggleUserDropdown"
@@ -87,11 +81,25 @@
             tabindex="0"
             (keydown.enter)="toggleUserDropdown = !toggleUserDropdown"
             (keydown.space)="toggleUserDropdown = !toggleUserDropdown"
+            styleClass="profile-avatar-image"
           ></p-avatar>
-          
-          <!-- User Dropdown Menu -->
-          <div 
-            class="user-dropdown" 
+          <ng-template #userInitialAvatar>
+            <p-avatar
+              [label]="userInitial"
+              shape="circle"
+              size="normal"
+              (click)="toggleUserDropdown = !toggleUserDropdown"
+              [attr.aria-expanded]="toggleUserDropdown"
+              [attr.aria-haspopup]="true"
+              aria-label="User menu"
+              tabindex="0"
+              (keydown.enter)="toggleUserDropdown = !toggleUserDropdown"
+              (keydown.space)="toggleUserDropdown = !toggleUserDropdown"
+            ></p-avatar>
+          </ng-template>
+
+          <div
+            class="user-dropdown"
             [class.show]="toggleUserDropdown"
             *ngIf="toggleUserDropdown"
             role="menu"
@@ -99,8 +107,8 @@
           >
             <ul class="dropdown-menu">
               <li role="none">
-                <a 
-                  role="menuitem" 
+                <a
+                  role="menuitem"
                   tabindex="0"
                   (click)="onEditPassword()"
                   (keydown.enter)="onEditPassword()"
@@ -111,22 +119,10 @@
                 </a>
               </li>
               <li role="none">
-                <a 
-                  role="menuitem" 
-                  tabindex="0"
-                  (click)="onUpdateProfile()"
-                  
-                  aria-label="Update profile"
-                >
-                  <i class="pi pi-user-edit mr-2"></i>
-                  Update Profile
-                </a>
-              </li>
-              <li role="none">
-                <button 
-                  pButton 
-                  label="Logout" 
-                  class="p-button-sm p-button-danger w-full danger" 
+                <button
+                  pButton
+                  label="Logout"
+                  class="p-button-sm p-button-danger w-full danger"
                   (click)="onLogout()"
                   role="menuitem"
                   aria-label="Logout from your account"
@@ -136,10 +132,10 @@
                 </button>
               </li>
               <li role="none">
-                <button 
-                  pButton 
-                  label="Delete Profile" 
-                  class="p-button-sm p-button-danger w-full danger" 
+                <button
+                  pButton
+                  label="Delete Profile"
+                  class="p-button-sm p-button-danger w-full danger"
                   (click)="onDelete()"
                   role="menuitem"
                   aria-label="Delete account permanently"
